kubernetes/apps/default/open-webui/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: open-webui
  namespace: default
  labels:
    app: open-webui
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  selector:
    matchLabels:
      app: open-webui
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 200%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: open-webui
    spec:
      containers:
        - name: open-webui
          image: ghcr.io/open-webui/open-webui:main@sha256:2b9d2bec40ff30eb71216065f5244c2861d30b75b4e49c40e39973ee64218cde # {"$imagepolicy": "flux-system:open-webui-main"}
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 256m
              memory: 512Mi
          volumeMounts:
            - mountPath: /app/backend/data
              name: open-webui-data
          ports:
            - containerPort: 8080
              name: open-webui
      restartPolicy: Always
      volumes:
        - name: open-webui-data
          persistentVolumeClaim:
            claimName: open-webui-data
