kubernetes/apps/default/open-webui/app/service.yaml
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/v1/service.json
---
apiVersion: v1
kind: Service
metadata:
  name: open-webui
  namespace: default
spec:
  selector:
    app: open-webui
  type: ClusterIP
  ports:
    - name: open-webui
      protocol: TCP
      port: 8080
      targetPort: 8080
